--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.10.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "postcss": "^8.4.31",
     "primeflex": "^3.3.1",
