--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
+    "js-cookie": "^3.0.5",
     "postcss": "^8.4.31",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
