--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.7.2",
     "sweetalert2": "^11.9.0",
     "web-vitals": "^2.1.0",
     "yarn": "^1.22.19"
