--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -11,6 +12,7 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
+    "eventemitter3": "^5.0.1",
     "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
     "postcss": "^8.4.31",
@@ -31,6 +33,7 @@
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.2",
+    "sockjs-client": "^1.6.1",
     "sweetalert2": "^11.9.0",
     "web-vitals": "^2.1.0",
     "yarn": "^1.22.19"
