--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "antd": "^5.10.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
     "date-fns": "^2.30.0",
     "eventemitter3": "^5.0.1",
     "framer-motion": "^10.16.4",
     "js-cookie": "^3.0.5",
+    "moment": "^2.29.4",
     "postcss": "^8.4.31",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.6.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.2",
     "react-icons": "^4.11.0",
