--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "date-fns": "^2.30.0",
     "eventemitter3": "^5.0.1",
     "framer-motion": "^10.16.4",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "postcss": "^8.4.31",
     "primeflex": "^3.3.1",
